# palette-sdk-go

./: .env.example  .gitignore  .gitleaksignore  .golangci.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG  CLAUDE.md  Makefile  OWNERS  OWNERS_ALIAS  README.md  docker-compose.yaml  go.mod  go.sum  go.work
agent/: Dockerfile  pyproject.toml
agent/app/: config.py  defaults.py  main.py  protocol.py  session.py
agent/app/crews/: palette_crew.py
agent/app/journeys/: agent_layer.py  deploy_eks.py  shared.py
agent/app/skills/: access.md  cloud_accounts.md  cluster_ops.md  concepts.md  operations.md  platform.md  profiles.md
agent/app/skills/api/: aks_cluster_api.md  api_key_api.md  aws_cluster_api.md  aws_infra_api.md  azure_cluster_api.md  cloud_account_api.md  cluster_common_api.md  diagnostics_api.md  edge_api.md  edge_cluster_api.md  eks_cluster_api.md  gcp_cluster_api.md  gke_cluster_api.md  maas_cluster_api.md  platform_settings_api.md  profile_api.md  project_api.md  registry_api.md  role_api.md  team_api.md  user_api.md  vm_api.md  vmware_cluster_api.md
agent/app/skills/journeys/: creating_cluster_profile.md  deploying_edge_cluster_agent.md  deploying_edge_cluster_appliance.md  deploying_eks_cluster.md
agent/app/skills/refs/: cloud_types.md  edge.md  edge_ports.md  profiles_ref.md  provisioning.md  rbac.md  vmo.md
agent/app/tools/: __init__.py  account_builder.py  base.py  edge_userdata.py  journey_preview.py  profile_builder.py
api/: DEEPCOPY_GENERATION.md  README.md  generate.sh
client/: account.go  account_aws.go  account_azure.go  alert.go  (+84 more)
(+7928 files in other folders)
