[project]
name = "palette-agent"
version = "0.1.0"
description = "CrewAI-powered agent backend for Palette Agentic"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "crewai>=0.108.0",
    "crewai-tools>=0.38.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
